# passkeys-python

./: .gitignore  README.md  compose.yaml  pyproject.toml
docker/postgres/: schema.sql
src/: dependencies.py  main.py
src/api/: susi.py
src/lib/: ids.py  sql.py  tokens.py  tokens_test.py
src/services/identity/: identity_service.py
src/services/identity/stores/: identity_store.py  pg_identity_store.py  pg_identity_store_test.py
src/static/: susi.html
