[project]
name = "passkeys-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.0.0",
    "uuid-utils>=0.11.0",
    "uvicorn[standard]>=0.35.0",
    "webauthn>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
plugins = ['pydantic.mypy']
